tests/fixtures/syntax_error/syntax_error.py
# TODO: fix since not an error for now
print("hello world!")
